--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,6 @@
-This project adds custom parsers for Flickr and Youtube, based on /adamwiggins gists, and enables them as defaults.
+This fork adds custom parsers for Flickr and Youtube, based on /adamwiggins gists, and enables them as defaults.
+
+=====================
 
 == Feedzirra
 
