--- a/README.textile
+++ b/README.textile
@@ -1,3 +1,6 @@
+This fork adds custom parsers for Flickr and Youtube, based on /adamwiggins gists, and enables them as defaults.
+
+
 h1. Feedzirra
 
 "http://github.com/pauldix/feedzirra/tree/master":http://github.com/pauldix/feedzirra/tree/master 
